<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/judul"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelBerat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/InputBerat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/InputBerat" />

    <EditText
        android:id="@+id/InputBerat"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:hint="@string/nilaiDefaultAngka"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <TextView
        android:id="@+id/labelJarak"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/InputJarak"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBerat" />

    <EditText
        android:id="@+id/inputJarak"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:hint="@string/nilaiDefaultAngka"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@+id/labelJarak" />

    <TextView
        android:id="@+id/labelRating"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="Bagaimana Pelayanannya? (Berikan Rating 1-4)"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/labelJarak" />

    <RadioGroup
        android:id="@+id/inputRatingGroups"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelRating">

        <RadioButton
            android:id="@+id/opsi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/opsi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/opsi3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/opsi4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/labelTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/InputTip"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/inputRatingGroups" />

    <Switch
        android:id="@+id/inputTip"
        android:layout_width="160dp"
        android:layout_height="wrap_content"

        android:layout_marginRight="10dp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@+id/labelTip" />

    <Button
        android:id="@+id/buttonHitung"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonHitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTip" />

    <TextView
        android:id="@+id/juduljmlongkir"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/JmlOngkir"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHitung" />

    <TextView
        android:id="@+id/jmlongkir"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHitung" />

    <TextView
        android:id="@+id/juduljmlTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Jumlah Tip yang diberikan"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/juduljmlongkir" />

    <TextView
        android:id="@+id/jmlTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jmlongkir" />

    <TextView
        android:id="@+id/juduljmlTotal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Jumlah Ongkos Kirim"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/juduljmlTip" />

    <TextView
        android:id="@+id/jmlTotal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jmlTip" />


</androidx.constraintlayout.widget.ConstraintLayout>